--- a/src/main/resources/templates/association_change_filter.html
+++ b/src/main/resources/templates/association_change_filter.html
@@ -15,7 +15,7 @@
             <form class="layui-form" action="">
 
                 <div class="layui-form-item">
-                    <label class="layui-form-label">可以获得免费考试的分数</label>
+                    <label class="layui-form-label">公费人数</label>
                     <div class="layui-input-inline">
                         <input type="password" name="old_password" required lay-verify="required" autocomplete="off" class="layui-input">
                     </div>
