--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
       <form class="layadmin-user-login-box layadmin-user-login-body layui-form">
         <div class="layui-form-item">
           <label class="layadmin-user-login-icon layui-icon layui-icon-username" for="LAY-user-login-username"></label>
-          <input type="text" name="username" id="LAY-user-login-username" lay-verify="required" placeholder="用户名" class="layui-input">
+          <input type="text" name="login" id="LAY-user-login-username" lay-verify="required" placeholder="用户名" class="layui-input">
         </div>
         <div class="layui-form-item">
           <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
@@ -58,12 +58,12 @@
         dataType: 'json',
         data: JSON.stringify(data.field),
         contentType:'application/json;charset=UTF-8',
-        url:'/login',
+        url:'/api/json/login',
         success:function(response){
           if(response.code==200){
             window.location.href = response.data.next;
           }else{
-            layui.msg(response.message);
+            layer.msg(response.message);
           }
         }
 
