Add rememberMe mechanism.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,9 @@
           <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
           <input type="password" name="password" id="LAY-user-login-password" lay-verify="required" placeholder="密码" class="layui-input">
         </div>
-
+        <div class="layui-form-item" style="margin-bottom: 20px;">
+          <input type="checkbox" name="rememberMe" lay-skin="primary" title="记住密码">
+        </div>
         <div class="layui-form-item">
           <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-login-submit">登 入</button>
         </div>
