grade_entry upload

--- a/src/main/resources/templates/test-xslx-upload.html
+++ b/src/main/resources/templates/test-xslx-upload.html
@@ -9,5 +9,9 @@
     <input class="style_file_content" accept="*.xls, *.xlsx" type="file" name="xsl-file"/>
     <button type="submit">Submit!</button>
 </form>
+<form action="/importer/grades" method="POST" enctype="multipart/form-data">
+    <input class="style_file_content" accept="*.xls, *.xlsx" type="file" name="xsl-file"/>
+    <button type="submit">Submit!</button>
+</form>
 </body>
 </html>
