add cloud support

--- a/src/main/resources/templates/test-file-upload.html
+++ b/src/main/resources/templates/test-file-upload.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form method="post" action="/api/json/add_grades_for_review" enctype="multipart/form-data">
-        <input name = "proofFile" type = "file"><br>
+        <input name = "fileName" type = "file"><br>
        <input type = "submit" value = "点击上传">
 </form>
 </body>
