--- a/src/main/resources/templates/teacher/information.html
+++ b/src/main/resources/templates/teacher/information.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../../static/css/layui.css" media="all">
-  <link rel="stylesheet" href="../../static/css/admin.css" media="all">
-  <script src="../../static/layui.js"></script>
+  <link rel="stylesheet" href="/css/layui.css" media="all">
+  <link rel="stylesheet" href="/css/admin.css" media="all">
+  <script src=/static/layui.js"></script>
 </head>
 
 <style>
