--- a/src/main/resources/templates/teacher/changePassword.html
+++ b/src/main/resources/templates/teacher/changePassword.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>修改密码</title>
-    <link rel="stylesheet" href="../../static/css/layui.css">
-    <script src="../../static/layui.js"></script>
+    <link rel="stylesheet" href="/css/layui.css">
+    <script src="/layui.js"></script>
 </head>
 <body>
 
