--- a/src/main/resources/templates/teacher/chart.html
+++ b/src/main/resources/templates/teacher/chart.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../../static/css/layui.css" media="all">
     <link rel="stylesheet" href="../../static/css/admin.css" media="all">
-    <script src="../../static/layui.js"></script>
-    <script src="../../static/lay/modules/echarts.min.js"></script>
+    <script src="/layui.js"></script>
+    <script src="/lay/modules/echarts.min.js"></script>
 </head>
 
 <body style="height: 100%; margin: 0">
