--- a/src/main/resources/templates/teacher/login.html
+++ b/src/main/resources/templates/teacher/login.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
   
-  <link rel="stylesheet" href="../../static/css/layui.css" media="all">
-  <link rel="stylesheet" href="../../static/css/login.css" media="all">
-  <script src="../../static/layui.js"></script>
+  <link rel="stylesheet" href="/css/layui.css" media="all">
+  <link rel="stylesheet" href="/css/login.css" media="all">
+  <script src="/layui.js"></script>
 
 </head>
 
