--- a/src/main/resources/templates/teacher/score.html
+++ b/src/main/resources/templates/teacher/score.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../../static/css/layui.css" media="all">
-  <link rel="stylesheet" href="../../static/css/admin.css" media="all">
-  <script src="../../static/layui.js"></script>
-  <script src="../../static/lay/modules/echarts.min.js"></script>
+  <link rel="stylesheet" href="/css/layui.css" media="all">
+  <link rel="stylesheet" href="/css/admin.css" media="all">
+  <script src="/layui.js"></script>
+  <script src="/lay/modules/echarts.min.js"></script>
 </head>
 
 <style>
