--- a/src/main/resources/templates/teacher/table.html
+++ b/src/main/resources/templates/teacher/table.html
@@ -6,9 +6,9 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="../../static/css/layui.css" media="all">
-    <link rel="stylesheet" href="../../static/css/admin.css" media="all">
-    <script src="../../static/layui.js"></script>
+    <link rel="stylesheet" href="/css/layui.css" media="all">
+    <link rel="stylesheet" href="/css/admin.css" media="all">
+    <script src="/layui.js"></script>
 </head>
 
 
